--- a/frontend/src/locales/en/common.json
+++ b/frontend/src/locales/en/common.json
@@ -54,6 +54,7 @@
         "name": "Last Name and First Name",
         "email": "Email"
     },
+    "saveButton": "Save changes",
     "excelButton": "Export as .xlsx",
     "syllabusButton": "View the syllabus"
 }
