--- a/frontend/src/locales/ro/common.json
+++ b/frontend/src/locales/ro/common.json
@@ -86,6 +86,6 @@
         "sheetName": "Studenți Înscriși"
     },
     "saveButton": "Salvează modificările",
-    "excelButton": "Exportează ca .xlsx",
+    "excelButton": "Exportă ca .xlsx",
     "syllabusButton": "Vezi fișa disciplinei"
 }
