--- a/frontend/src/locales/en/common.json
+++ b/frontend/src/locales/en/common.json
@@ -1,45 +1,61 @@
 {
     "en": "English",
     "ro": "Romanian",
-    "registration.form": {
-        "email": {
-            "placeholder": "Email",
-            "errorMessage": "Text",
-            "label": "Email"
+    "registration": {
+        "codes": {
+            "NO_PASSWORD_OR_EMAIL_PROVIDED": "Please provide both a password and an email",
+            "ALREADY_REGISTERED": "You are already registered",
+            "SUCCESS": "Your account was created succesfully. Once your account is verified, you will be notified by email"
         },
-        "password": {
-            "placeholder": "Password",
-            "errorMessage": "Text",
-            "label": "Password"
-        },
-        "confirmPassword": {
-            "placeholder": "Confirm Password",
-            "errorMessage": "Text",
-            "label": "Confirm Password"
-        },
-        "button": {
-            "label": "Sign Up"
-        },
-        "alreadyAnUser": "Already an user? ",
-        "alreadyAnUserLink": "Sign In"
+        "form": {
+            "email": {
+                "placeholder": "Email",
+                "errorMessage": "Text",
+                "label": "Email"
+            },
+            "password": {
+                "placeholder": "Password",
+                "errorMessage": "Text",
+                "label": "Password"
+            },
+            "confirmPassword": {
+                "placeholder": "Confirm Password",
+                "errorMessage": "Text",
+                "label": "Confirm Password"
+            },
+            "button": {
+                "label": "Sign Up"
+            },
+            "alreadyAnUser": "Already an user? ",
+            "alreadyAnUserLink": "Sign In"
+        }
     },
-    "login.form": {
-        "email": {
-            "placeholder": "Email",
-            "errorMessage": "Text",
-            "label": "Email"
+    "login": {
+        "codes": {
+            "NO_PASSWORD_OR_EMAIL_PROVIDED": "Please provide both a password and an email",
+            "INVALID_CREDENTIALS": "The password or the email or wrong",
+            "ACCOUNT_NOT_VERIFIED": "Your account wasn`t verified yet. You will receive an email as soon as your account is verified.",
+            "PASSWORD_NOT_CHANGED": "Please reset your password before logging in for the first time",
+            "SUCCESS": "SUCCESS"
         },
-        "password": {
-            "placeholder": "Password",
-            "errorMessage": "Text",
-            "label": "Password"
-        },
-        "forgotPassword": "Forgot your password?",
-        "button": {
-            "label": "Sign In"
-        },
-        "newUser": "New user? ",
-        "newUserLink": "Sign Up"
+        "form": {
+            "email": {
+                "placeholder": "Email",
+                "errorMessage": "Text",
+                "label": "Email"
+            },
+            "password": {
+                "placeholder": "Password",
+                "errorMessage": "Text",
+                "label": "Password"
+            },
+            "forgotPassword": "Forgot your password?",
+            "button": {
+                "label": "Sign In"
+            },
+            "newUser": "New user? ",
+            "newUserLink": "Sign Up"
+        }
     },
     "resetPassword.form": {
         "instructions": "Your new password must be different from previous used password.",
